<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="start">start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="finish">finish</string>
    <string name="hey_congratulations">Hey, Congratulations</string>
    <string name="result">Result</string>
    <string name="show_correct_answers">Show Correct Answers?</string>
</resources>