<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg"
            tools:context=".MainActivity">
        <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:text="@string/quiz_app"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintStart_toStartOf="@id/tvAppName"
                app:layout_constraintEnd_toEndOf="@id/tvAppName"
                app:layout_constraintTop_toBottomOf="@id/tvAppName"
                android:background="@color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">
                <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="36sp"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/tvPromptName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                        android:layout_marginTop="16dp"
                        android:text="@string/please_enter_your_name"
                        android:textSize="16sp"/>
                <EditText
                        android:id="@+id/etNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPromptName"
                        android:layout_marginTop="16dp"
                        android:padding="16dp"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:background="@drawable/edit_text_border"/>
                <Button
                        android:id="@+id/btnStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etNameInput"
                        android:layout_marginTop="8dp"
                        app:layout_constraintCircleRadius="20dp"
                        android:padding="16dp"
                        android:text="@string/start"
                        android:textStyle="bold"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>