<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg"

            tools:context=".ResultActivity">
        <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.02"
                style="@style/resultScreenTextAppearanceBig"
                android:text="@string/result"
        />
        <ImageView
                android:id="@+id/ivTrophy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvResult"
                android:src="@drawable/ic_trophy"/>
        <TextView
                android:id="@+id/tvCongratulations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivTrophy"
                style="@style/resultScreenTextAppearanceBig"
                android:text="@string/hey_congratulations"
        />
        <TextView
                android:id="@+id/tvInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCongratulations"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/tvInputResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInputName"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/tvCheckAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInputResult"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/show_correct_answers"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        <Button
                android:id="@+id/btnFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCheckAnswers"
                android:layout_margin="24dp"
                android:padding="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/finish"
                android:textColor="@color/purple_700"
                android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>